--- a/stylesheet.css
+++ b/stylesheet.css
@@ -264,10 +264,11 @@ header .container nav ul li a {
 
 .main-wrapper #mainvisiual {
   background-image: url(top.jpg);
-  height: 520px;
+  height: 480px;
   margin-top: 80px;
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
 }
 
 .main-wrapper section {
@@ -448,6 +449,7 @@ header .container nav ul li a {
 .main-wrapper #contact .contents p {
   text-align: center;
   font-size: 16px;
+  line-height: 25px;
   margin-bottom: 50px;
 }
 
@@ -511,6 +513,10 @@ footer .container p {
 }
 
 @media screen and (max-width: 767px) {
+  header .container #header-logo {
+    position: absolute;
+    left: 5px;
+  }
   header .container #menu-icon {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
@@ -600,6 +606,10 @@ footer .container p {
     font-size: 18px;
     text-align: center;
     text-decoration: none;
+  }
+  .main-wrapper #mainvisiual {
+    width: 100%;
+    background-position: -50px;
   }
   .main-wrapper #products .contents {
     -webkit-box-orient: vertical;
