--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -268,7 +268,7 @@ header {
         height: 520px;
         margin-top: 80px;
         background-size: cover;
-        background-position: center;
+        background-position: center bottom 0;
         background-repeat: no-repeat;
     }
 
