--- a/stylesheet.css
+++ b/stylesheet.css
@@ -262,12 +262,17 @@ header .container nav ul li a {
   font-size: 18px;
 }
 
+header .container nav ul .close {
+  display: none;
+}
+
 .main-wrapper #mainvisiual {
   background-image: url(top.jpg);
+  width: 100%;
   height: 520px;
   margin-top: 80px;
   background-size: cover;
-  background-position: center bottom 0;
+  background-position: 20% 80%;
   background-repeat: no-repeat;
 }
 
@@ -608,8 +613,7 @@ footer .container p {
     text-decoration: none;
   }
   .main-wrapper #mainvisiual {
-    width: 100%;
-    background-position: -50px;
+    background-position: -70px;
   }
   .main-wrapper #products .contents {
     -webkit-box-orient: vertical;
