--- a/stylesheet.css
+++ b/stylesheet.css
@@ -204,6 +204,16 @@ p {
   font-size: 16px;
 }
 
+.effect {
+  opacity: 0;
+}
+
+.effect.fadein {
+  opacity: 1;
+  -webkit-transition: 2s;
+  transition: 2s;
+}
+
 header {
   width: 100%;
   background-color: white;
@@ -319,7 +329,6 @@ header .container nav ul .close {
   padding: 10px 0;
   -webkit-transition: 0.3s;
   transition: 0.3s;
-  opacity: 0;
 }
 
 .main-wrapper #products .contents .product:hover {
@@ -335,10 +344,6 @@ header .container nav ul .close {
   font-size: 12px;
   margin: 0 4%;
   line-height: 23px;
-}
-
-.main-wrapper #products .contents .fadein {
-  opacity: 1;
 }
 
 .main-wrapper #news .contents {
@@ -361,7 +366,6 @@ header .container nav ul .close {
       flex-wrap: wrap;
   font-size: 20px;
   width: 60%;
-  opacity: 0;
 }
 
 .main-wrapper #news .contents dl dt {
@@ -375,12 +379,6 @@ header .container nav ul .close {
 .main-wrapper #news .contents dl dd {
   width: 65%;
   margin: 20px 0 0 0px;
-}
-
-.main-wrapper #news .contents .fadein {
-  opacity: 1;
-  -webkit-transition: 2s;
-  transition: 2s;
 }
 
 .main-wrapper #news .contents img {
