--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -206,6 +206,14 @@ p {
     font-size: 16px;
 }
 
+.effect {
+    opacity: 0;
+}
+
+.effect.fadein {
+    opacity: 1;
+    transition: 2s;
+}
 // -----header-----
 
 header {
@@ -317,7 +325,7 @@ header {
                 border-radius: 5px;
                 padding: 10px 0;
                 transition: 0.3s;
-                opacity: 0;
+                
                 &:hover {
                     opacity: 0.7;
                 }
@@ -333,10 +341,7 @@ header {
                     line-height: 23px;
                 }
             }
-            .fadein {
-                opacity: 1;
-                
-            }
+            
         }
     }
 
@@ -352,7 +357,7 @@ header {
                 // justify-content: space-between;
                 font-size: 20px;
                 width: 60%;
-                opacity: 0;
+                
                 dt {
                     width: 30%;
                     display: flex;
@@ -365,10 +370,7 @@ header {
                     margin: 20px 0 0 0px;
                 }
             }
-            .fadein {
-                opacity: 1;
-                transition: 2s;
-            }
+            
 
             img {
                 width: 40%;
