--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -218,19 +218,32 @@ p {
 
 header {
     width: 100%;
-    background-color: white;
-    opacity: 0.9;
     position: fixed;
     top: 0px;
-    z-index: 30;
     .container {
+        position: fixed;
+        top: 0;
         width: 100%;
         height: 80px;
         display: flex;
         justify-content: space-between;
         align-items: center;
-
+        // SP時にheader-navのz-indexが下になるように配置
+        #header-back {
+            width: 100%;
+            height: 80px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            background-color: white;
+            opacity: 0.9;
+            z-index: 10;
+        }
+        // 
         #header-logo {
+            // header-backの上に来るように
+            z-index: 20;
+            // 
             a {
                 img {
                     width: 50px;
@@ -244,10 +257,14 @@ header {
         }
 
         #menu-icon {
-            display: none;
+            // display: none;
+            // header-backの上に来るように
+            z-index: 20;
+            // 
         }
 
-        nav {
+        #header-nav {
+            z-index: 20;
             ul {
                 display: flex;
 
@@ -264,11 +281,10 @@ header {
                         font-size: 18px;
                     }
                 }
-                .close {
-                    display: none;
-                }
+                
             }
         }
+        
     }
 }
 
@@ -513,6 +529,7 @@ footer {
 @media screen and(max-width: 767px) {
     header {
         .container {
+            position: relative;
             #header-logo {
                 position: absolute;
                 left: 5px;
@@ -536,6 +553,9 @@ footer {
                     border-radius: 2px;
                     background-color: #666;
                     vertical-align: top;
+                    // ハンバーガーメニューから✕への変化の時間
+                    transition: all 0.3s;
+                    // 
                 }
                 span:nth-child(2) {
                     margin-top: 10px;
@@ -544,8 +564,8 @@ footer {
                     margin-top: 20px;
                 }
             }
-
-            .open {
+            // toggleClassでopenがついたとき
+            #menu-icon.open {
                 span {
                     top: 9px !important;
                     &:first-child {
@@ -561,17 +581,18 @@ footer {
                     }
                 }
             }
+            // 
 
-            nav {
+            #header-nav {
                 box-sizing: border-box;
                 position: fixed;
-                top: 80px;
+                top: -100%;
                 left: 0;
-                display: none;
                 width: 100%;
                 height: calc(468px - 60px);
                 background: rgba(80, 78, 78, 0.5);
-
+                transition: all 0.5s;
+                z-index: -10;
                 ul {
                     width: 100%;
                     position: absolute;
@@ -603,9 +624,14 @@ footer {
                         }
                         
                     }
-
                 }
             }
+
+            // toggleClassでsp_openがついたとき
+            #header-nav.sp_open {
+                top: 80px;
+            }
+            // 
         }
     }
 
