--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -220,6 +220,9 @@ header {
     width: 100%;
     position: fixed;
     top: 0px;
+    // hoverしたときにproductより上に来るように
+    z-index: 100;
+    // 
     .container {
         position: fixed;
         top: 0;
@@ -341,7 +344,7 @@ header {
                 border-radius: 5px;
                 padding: 10px 0;
                 transition: 0.3s;
-                
+                z-index: 1;
                 &:hover {
                     opacity: 0.7;
                 }
@@ -630,6 +633,7 @@ footer {
             // toggleClassでsp_openがついたとき
             #header-nav.sp_open {
                 top: 80px;
+                z-index: 100;
             }
             // 
         }
