--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -357,7 +357,7 @@ header {
 
                 p {
                     font-size: 12px;
-                    margin: 0 4%;
+                    margin: 0 10%;
                     line-height: 23px;
                 }
             }
@@ -375,7 +375,7 @@ header {
                 display: flex;
                 flex-wrap: wrap;
                 // justify-content: space-between;
-                font-size: 20px;
+                font-size: 16px;
                 width: 60%;
                 
                 dt {
@@ -422,7 +422,7 @@ header {
 
 
                     h3 {
-                        font-size: 20px;
+                        font-size: 16px;
                         margin-bottom: 20px;
                     }
 
@@ -431,14 +431,14 @@ header {
                         flex-wrap: wrap;
 
                         dt {
-                            font-size: 18px;
+                            font-size: 16px;
                             width: 35%;
                             padding: 10px 20px;
 
                         }
 
                         dd {
-                            font-size: 18px;
+                            font-size: 16px;
                             width: 65%;
                             padding: 10px 0px;
                         }
@@ -661,8 +661,9 @@ footer {
 
                     p {
                         font-size: 15px;
+                        line-height: 28px;
                         text-align: left;
-                        margin: 8px 15px;
+                        margin: 3% 8%;
 
                         br {
                             display: none;
